修复了一些bug